# readitlater

./: LICENSE  pyproject.toml
api/: app.py  dependencies.py  models.py  settings.py
api/routers/auth/: auth.py  utils.py
api/routers/sites/: schemas.py  sites.py
api/routers/users/: schemas.py  users.py
tests/: test_api.py
