[tool.poetry]
name = "readitlater"
version = "0.1.0"
description = ""
authors = ["gonzadev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = "1.10.12"
sqlmodel = "^0.0.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
pytest = "^7.4.3"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
